--- a/variables-dev.yaml
+++ b/variables-dev.yaml
@@ -8,3 +8,5 @@ CART_HOST: cart-dev.daws66s.online
 SHIPPING_HOST: shipping-dev.daws66s.online 
 PAYMENT_HOST: payment-dev.daws66s.online 
 DISPATCH_HOST: dispatch-dev.daws66s.online 
+NEXUS_URL: http://44.201.173.96:8081/repository
+group_id: "com/roboshop"
