--- a/roles/common/tasks/app-setup.yaml
+++ b/roles/common/tasks/app-setup.yaml
@@ -23,13 +23,13 @@
 #     dest: /app
 #     remote_src: yes
 
-  - name: Download artifacts from nexus
-    ansible.builtin.get_url:
-      url: "{{NEXUS_URL}}/{{component}}/{{group_id}}/{{component}}/{{app_version}}/{{component}}-{{app_version}}.zip"
-      dest: /tmp
+- name: "Download artifacts from nexus"
+  ansible.builtin.get_url:
+    url: "{{NEXUS_URL}}/{{component}}/{{group_id}}/{{component}}/{{app_version}}/{{component}}-{{app_version}}.zip"
+    dest: /tmp
 
-  - name: "extract {{component}} application"
-    ansible.builtin.unarchive:
-      src: "/tmp/{{component}}-{{app_version}}.zip"
-      dest: /app
-      remote_src: yes
+- name: "extract {{component}} application"
+  ansible.builtin.unarchive:
+    src: "/tmp/{{component}}-{{app_version}}.zip"
+    dest: /app
+    remote_src: yes
