--- a/variables-dev.yaml
+++ b/variables-dev.yaml
@@ -10,3 +10,4 @@ PAYMENT_HOST: payment-dev.daws66s.online
 DISPATCH_HOST: dispatch-dev.daws66s.online 
 NEXUS_URL: http://172.31.87.249:8081/repository
 group_id: "com/roboshop"
+packaging: "zip"
