--- a/roles/common/tasks/deployment.yaml
+++ b/roles/common/tasks/deployment.yaml
@@ -21,20 +21,20 @@
     path: /app
     state: directory
 
-# - name: "download {{component}} application"
-#   tags:
-#   - deployment
-#   ansible.builtin.get_url:
-#     url: "https://roboshop-builds.s3.amazonaws.com/{{component}}.zip"
-#     dest: /tmp
+- name: "download {{component}} application"
+  tags:
+  - deployment
+  ansible.builtin.get_url:
+    url: "https://roboshop-builds.s3.amazonaws.com/{{component}}.zip"
+    dest: /tmp
 
-# - name: "extract {{component}} application"
-#   tags:
-#   - deployment
-#   ansible.builtin.unarchive:
-#     src: "/tmp/{{component}}.zip"
-#     dest: /app
-#     remote_src: yes
+- name: "extract {{component}} application"
+  tags:
+  - deployment
+  ansible.builtin.unarchive:
+    src: "/tmp/{{component}}.zip"
+    dest: /app
+    remote_src: yes
 
 - name: Install dependencies
   tags:
